--- a/2018/typesetting.tex
+++ b/2018/typesetting.tex
@@ -4,6 +4,10 @@
 \usepackage{hyperref}
 \usepackage{tikz}
 \usepackage{pgfplots}
+\usepackage{graphicx}
+\usepackage{wrapfig}
+\graphicspath{ {img/} }
+% \usepackage[margin=1.2in]{geometry}
 
 \usepackage{listings}
 \lstdefinelanguage{julia}{
